corrected age verification z-index on mobile && web stylesheets.

--- a/src/containers/ageVerification/_ageVerification_mobile.scss
+++ b/src/containers/ageVerification/_ageVerification_mobile.scss
@@ -1,9 +1,8 @@
 @media only screen and (max-width: 930px) {
-// @media only screen and (max-width: 640px) {
   .age-verification {
     height: 100%;
     width: 100%;
-    z-index: 10;
+    z-index: 30;
     justify-content: center;
     position: fixed;
     display: none;
