--- a/src/containers/ageVerification/_ageVerification_web.scss
+++ b/src/containers/ageVerification/_ageVerification_web.scss
@@ -1,7 +1,7 @@
-@media only screen and (min-width: 1079px) and (max-width : 1921px) {
+@media only screen and (min-width: 931px) {
   .age-verification {
     position: fixed;
-    z-index: 10;
+    z-index: 30;
     display: none;
     align-items: center;
     justify-content: center;
